--- a/main.ipynb
+++ b/main.ipynb
@@ -250,8 +250,8 @@
     "### Stopwords\n",
     "\n",
     "Stopword removal implies the removal of certain words which appear in an excessive frequency in the language. Common\n",
-    "examples for English are \"the\", \"and\" and so forth. These are useful to remove because they are so often used that they\n",
-    "lose meaning."
+    "examples for English are \"the\", \"and\" and so forth. These are useful to remove because they lose meaning viewed\n",
+    "individually."
    ],
    "metadata": {
     "collapsed": false
@@ -320,7 +320,9 @@
     "def pre_process_text(text, stopwords, tokenizer_obj):\n",
     "    \"\"\"\n",
     "    Cleans the text of unnecessary features\n",
-    "    :param text: string\n",
+    "    :param text: sentence to clean\n",
+    "    :param stopwords: list of very commonly used words\n",
+    "    :param tokenizer_obj: SudachiPy tokenizer object\n",
     "    :return: cleaned string\n",
     "    \"\"\"\n",
     "    # One by one: (kanji), (hiragana and katakana), (western alphabet and numbers), (western alphabet and numbers\n",
@@ -347,6 +349,38 @@
     "data = [pre_process_text(i, lst_stopwords, tokenizer_obj) for i in data]\n",
     "sample(data, 5)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## NLP technique\n",
+    "\n",
+    "Now we need to choose a technique to actually process this text, because after all, our neural network only accepts\n",
+    "numbers, not japanese characters. Some examples of the current most popular techniques are Bag of Words, TF_IDF Scheme,\n",
+    "BERT, word2vec.\n",
+    "\n",
+    "I've decided to use word2vec here, which maps words and/or phrases to vectors. word2vec comes with 2 options, Skip Gram\n",
+    "and Continuous Bag of Words, which are essentially mirrored versions of each other. CBOW is trained to predict a single\n",
+    "word from multiple context words, SG is trained to predict multiple words from a single context word."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
