--- a/main.ipynb
+++ b/main.ipynb
@@ -61,18 +61,22 @@
    "source": [
     "import re\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from sudachipy import tokenizer, dictionary\n",
-    "from gensim.models import KeyedVectors\n",
-    "from tensorflow.keras import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Embedding, Flatten, Bidirectional, LSTM\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
     "import tensorflow as tf\n",
+    "from gensim.models import KeyedVectors\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sudachipy import tokenizer, dictionary\n",
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Embedding, LSTM\n",
+    "from tensorflow.keras.metrics import Precision, Recall\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.python.keras.regularizers import l2\n",
     "\n",
     "physical_devices = tf.config.list_physical_devices('GPU')\n",
     "for i in physical_devices:\n",
@@ -201,6 +205,8 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
+    "df = df.head(50000)\n",
+    "\n",
     "labels = df.pop('isfake')\n",
     "data = df.pop('context')"
    ],
@@ -346,7 +352,7 @@
     "    :return: cleaned string\n",
     "    \"\"\"\n",
     "    # One by one: (kanji), (hiragana and katakana), (western alphabet and numbers), (western alphabet and numbers\n",
-    "    # except it's the off-looking japanese version), and unicode flag\n",
+    "    # except it's the off-looking japanese version), the vowel extending symbol and unicode flag\n",
     "    pattern = re.compile(r'([一-龯]+)|([ぁ-んァ-ン]+)|([a-zA-Z0-9]+)|([ａ-ｚＡ-Ｚ０-９]+)|[ー+]', re.UNICODE)\n",
     "    text = ''.join([x.group() for x in re.finditer(pattern, text.lower().strip())])\n",
     "\n",
@@ -414,7 +420,7 @@
    ],
    "source": [
     "print(\"Loading word embedding into Gensim, this may take a while...\")\n",
-    "w2vec_model = KeyedVectors.load_word2vec_format(\"jawiki.all_vectors.300d.txt\", binary=False)"
+    "w2vec_model = KeyedVectors.load_word2vec_format(\"jawiki.all_vectors.100d.txt\", binary=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -479,7 +485,7 @@
     "encoded_docs = t.texts_to_sequences(data)\n",
     "print(encoded_docs[0])\n",
     "\n",
-    "padded_docs = pad_sequences(encoded_docs, padding='post')"
+    "padded_docs = pad_sequences(encoded_docs, padding='post', maxlen=2000)"
    ],
    "metadata": {
     "collapsed": false,
@@ -494,11 +500,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(padded_docs, labels, train_size=0.85, stratify=labels, shuffle=True)\n",
-    "X_train = np.asarray(X_train)\n",
-    "X_test = np.asarray(X_test)\n",
-    "y_train = np.asarray(y_train)\n",
-    "y_test = np.asarray(y_test)"
+    "X_train, X_test, y_train, y_test = train_test_split(padded_docs, labels, train_size=0.80, stratify=labels, shuffle=True)\n",
+    "X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, train_size=0.5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -515,12 +518,15 @@
    "source": [
     "model = Sequential()\n",
     "model.add(embedding_layer)\n",
-    "model.add(LSTM(1000))\n",
+    "model.add(LSTM(400,\n",
+    "               kernel_regularizer=l2(0.001),\n",
+    "               recurrent_regularizer=l2(0.001),\n",
+    "               bias_regularizer=l2(0.001)))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
-    "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='categorical_crossentropy')"
+    "model.compile(optimizer=Adam(0.001),\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy', Precision(), Recall()])"
    ],
    "metadata": {
     "collapsed": false,
@@ -535,7 +541,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, epochs=100, batch_size=128, validation_split=0.1)"
+    "hist = model.fit(X_train, y_train, epochs=20, batch_size=32, validation_data=(X_val, y_val))"
    ],
    "metadata": {
     "collapsed": false,
@@ -551,8 +557,55 @@
    "outputs": [],
    "source": [
     "nn_pred = model.predict(X_test)\n",
-    "nn_pred =  np.where(nn_pred > 0.5, 1, 0 )\n",
-    "ac = accuracy_score(y_test, nn_pred)"
+    "nn_pred = np.where(nn_pred > 0.5, 1, 0)\n",
+    "ac = accuracy_score(y_test, nn_pred)\n",
+    "print(ac)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_hist = hist.history['loss']\n",
+    "val_hist = hist.history['val_loss']\n",
+    "plt.plot(train_hist)\n",
+    "plt.plot(val_hist)\n",
+    "plt.title('Training curve')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('val_loss')\n",
+    "plt.legend(['train', 'val'], loc='upper right')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_hist = hist.history['accuracy']\n",
+    "val_hist = hist.history['val_accuracy']\n",
+    "plt.plot(train_hist)\n",
+    "plt.plot(val_hist)\n",
+    "plt.title('Training curve')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('val_accuracy')\n",
+    "plt.legend(['train', 'val'], loc='lower right')\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -597,7 +650,7 @@
     "[Gensim Keras embedding layer example](https://github.com/RaRe-Technologies/gensim/wiki/Using-Gensim-Embeddings-with-Keras-and-Tensorflow)\n",
     "How to create a Keras embedding layer with a Gensim model\n",
     "\n",
-    "[Using pretrained gensim Word2vec embedding in keras](https://stackoverflow.com/q/60082554/7174982)\n",
+    "[Using pretrained gensim Word2vec embedding in keras](https://stackoverflow.com/a/52126699/7174982)\n",
     "Helpful answer on how to encode the text sequences"
    ],
    "metadata": {
