--- a/main.ipynb
+++ b/main.ipynb
@@ -35,25 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "a:\\software\\coding projects\\aai\\japanesetextclassification\\venv\\lib\\site-packages\\gensim\\similarities\\__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": "              count        mean         std  min  25%    50%     75%     max\nisfake      13040.0    1.075613    0.796950  0.0  0.0    1.0    2.00     2.0\nnchar_real  13040.0  261.029371  288.257753  0.0  0.0  215.0  407.00  4447.0\nnchar_fake  13040.0  328.273160  354.673240  0.0  0.0  255.0  489.25  2582.0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>count</th>\n      <th>mean</th>\n      <th>std</th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>isfake</th>\n      <td>13040.0</td>\n      <td>1.075613</td>\n      <td>0.796950</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>2.00</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>nchar_real</th>\n      <td>13040.0</td>\n      <td>261.029371</td>\n      <td>288.257753</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>215.0</td>\n      <td>407.00</td>\n      <td>4447.0</td>\n    </tr>\n    <tr>\n      <th>nchar_fake</th>\n      <td>13040.0</td>\n      <td>328.273160</td>\n      <td>354.673240</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>255.0</td>\n      <td>489.25</td>\n      <td>2582.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,8 +120,8 @@
    "source": [
     "From what we can see the dataset does not contain null values, and it's class distribution is mostly even.\n",
     "\n",
-    "Although mostly even, not perfectly even, so while my first thought was accuracy as a metric, i've decided to use the\n",
-    "ROC curve instead."
+    "Although mostly even, not perfectly even, so while my first thought was accuracy as a metric, I've decided to opt for\n",
+    "F1 score as well. So I'm gonne be using accuracy as a training validation metric, and F1 as a test metric."
    ],
    "metadata": {
     "collapsed": false,
@@ -560,8 +552,8 @@
     "model.add(embedding_layer)\n",
     "model.add(LSTM(100,\n",
     "               kernel_regularizer=l2(0.001),\n",
-    "            recurrent_regularizer=l2(0.001),\n",
-    "            bias_regularizer=l2(0.001)))\n",
+    "               recurrent_regularizer=l2(0.001),\n",
+    "               bias_regularizer=l2(0.001)))\n",
     "model.add(Dense(25, activation=LeakyReLU(0.1)))\n",
     "model.add(Dense(3, activation='softmax'))\n",
     "\n",
@@ -666,19 +658,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19546220349741528\n"
+      "F1 score is 0.19546220349741528\n"
      ]
     }
    ],
    "source": [
-    "f=  f1_score(np.argmax(y_test, axis=1), np.argmax(nn_pred, axis=1), average='weighted')\n",
-    "print(f)"
+    "f = f1_score(np.argmax(y_test, axis=1), np.argmax(nn_pred, axis=1), average='weighted')\n",
+    "print(f\"F1 score is {f}\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -745,10 +737,23 @@
    "source": [
     "## Conclusion\n",
     "\n",
+    "As you can see, the results were absolutely abysmal. The model just keeps predicting the exact same values, leading\n",
+    "to a very poor F1 score. Looking at the training curves, we can see that the loss and val_loss are decreasing in a\n",
+    "pretty nice manner, but the accuracy curves are moving pretty much horizontally.\n",
+    "\n",
+    "My first suspicion of what was  happening was exploding gradients, which is why I introduced gradient clipping and\n",
+    "L2 regularization, but this didn't fix the issue. Neither did switching from multiclass labels to one-hot encoded\n",
+    "multiclass labels help. Taking into account that my IDE regularly froze or crashed during the training phase,\n",
+    "presumably due to memory errors, I'm concluding that this problem is too complex for a home researcher to solve. This\n",
+    "can be further confirmed if you take into account the amount of data we have (~13k, the amount of vocabulary\n",
+    "Japanese has (about 8-10k characters are commonly in use), and how large our word-embedding is (1.5 million!).\n",
+    "\n",
+    "\n",
     "Package wise, we still have a long way to go. The Japanese equivalents of the NLP packages are more underveloped,\n",
     "less reliable, and generally slower too. This can be mostly attributed to the language being difficult, but it's\n",
-    "something you have to keep in mind while working with Japanese text. Maybe in a few years the tools will be at a good\n",
-    "level.\n"
+    "definitely something you have to keep in mind while working with Japanese text. Research paper wise there's also\n",
+    "barely any material available on the topic, which leads me to believe that Japanese researchers aren't particularly\n",
+    "focusing on this area of AI. Maybe in a few years Japanese NLP will be in a good place.\n"
    ],
    "metadata": {
     "collapsed": false,
