--- a/main.ipynb
+++ b/main.ipynb
@@ -744,8 +744,8 @@
     "My first suspicion of what was  happening was exploding gradients, which is why I introduced gradient clipping and\n",
     "L2 regularization, but this didn't fix the issue. Neither did switching from multiclass labels to one-hot encoded\n",
     "multiclass labels help. Taking into account that my IDE regularly froze or crashed during the training phase,\n",
-    "presumably due to memory errors, I'm concluding that this problem is too complex for a home researcher to solve. This\n",
-    "can be further confirmed if you take into account the amount of data we have (~13k, the amount of vocabulary\n",
+    "presumably due to memory errors, I'm concluding that this problem is too complex for a home computer to solve. This\n",
+    "can be further confirmed if you take into account the amount of data we have (~13k), the amount of vocabulary\n",
     "Japanese has (about 8-10k characters are commonly in use), and how large our word-embedding is (1.5 million!).\n",
     "\n",
     "\n",
